--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
+  color: #000;
+  background-color: #fff;
+}
+
+[data-theme="dark"] body {
+  color: #fff;
+  background-color: #000;
 }
 
 .main-container {
