--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ nav .container {
   font-size: 1.5rem;
   height: 1em;
   margin: 4px;
-  padding: 8px 16px;
+  padding: 4px 8px;
   transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   user-select: none;
   width: 1em;
@@ -90,5 +90,10 @@ nav .container {
 
   nav {
     padding: 0 16px;
+  }
+
+  .nav-right-container,
+  .nav-left-container {
+    gap: 0px;
   }
 }
